Mini map service initialization
- Get information of locations
- Post comments
